# hyprmnesia

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  build.ts  knip.json  package.json
.changeset/: bright-logo-refresh.md  clean-falcons-marry.md  config.json  dummy-main-pr.md  encrypt-blobs.md  encrypt-index-db.md  encryption-controls.md  native-macos-ocr.md  quick-toggle-and-capture-quality.md  quiet-tests-cover.md  release-docs-checklist.md  release-on-changeset-merge.md  require-pr-changesets.md  semantic-search-embeddings.md  small-logo-cleanup.md  soft-cameras-listen.md  tray-quit-stops-daemon.md  update-notification.md
.github/workflows/: ci.yml  release-pr.yml  release.yml
asr/: Cargo.toml
asr/src/: main.rs
asr/tests/: binary.rs
docs/: install.md  release.md
embed/: Cargo.toml
embed/src/: main.rs
embed/tests/: binary.rs
ocr/: Cargo.toml
ocr/src/: main.rs
ocr/tests/: binary.rs
sck/: Cargo.toml  build.rs
sck/src/: mac.rs  main.rs
scripts/: build-sqlcipher.ts  checksums.ts  package.ts  release-notes.ts  smoke-sqlcipher.ts  sync-version.ts
src/: cli.ts  config.test.ts  config.ts  log.ts
src/capture/: audio.test.ts  audio.ts  ffmpeg.test.ts  ffmpeg.ts  sck.ts  screen.ts  wav.test.ts  wav.ts  window.test.ts  window.ts  window_context.ts  wlcap.ts
src/core/: daemon.ts  events.ts  logger.ts  orchestrator.ts  transcription_suppression.test.ts  transcription_suppression.ts  tray.ts  window-tracker.ts
src/mcp/: auth.test.ts  auth.ts  protocol.ts  query_encoder.test.ts  read_store.ts  server.test.ts  server.ts
src/mcp/read_store/: activity.test.ts  activity.ts  filters.test.ts  filters.ts  format.test.ts  format.ts  fuse.test.ts  index.ts  search.test.ts  types.ts
src/process/: embedding_queue.test.ts  embedding_queue.ts  transcription_queue.test.ts  transcription_queue.ts  types.ts
src/process/embeddings/: client.ts  endpoint.ts  index.ts  local.ts  noop.ts  service.test.ts  service.ts
src/process/ocr/: auto.ts  index.ts  native.ts  noop.ts  tesseract.test.ts  tesseract.ts
src/process/transcription/: auto.ts  index.ts  noop.ts  parakeet.ts
src/replay/: range.test.ts  range.ts  server.ts  store.test.ts  store.ts
src/store/: blob_crypto.test.ts  blob_crypto.ts  blob_migrate.test.ts  blob_migrate.ts  blobs.test.ts  blobs.ts  db.ts  db_key.ts  index_db.test.ts  index_db.ts  vec.test.ts  vec.ts
src/store/sqlcipher/: database.ts  ffi.ts
src/tui/: App.tsx  EventList.tsx  Footer.tsx  LiveTranscript.tsx  LogPanel.tsx  SettingsPanel.tsx  Sparkline.tsx  StatusPanel.tsx  remoteOrchestrator.ts  run.tsx  settingsInput.ts
src/types/: screenshot-desktop.d.ts
src/update/: check.test.ts  check.ts
src/util/: paths.ts  secret_store.ts  selfCli.ts
tray/: Cargo.toml
tray/src/: main.rs
wasapi/: Cargo.toml
wasapi/src/: main.rs  win.rs
wlcap/: Cargo.toml
wlcap/src/: linux.rs  main.rs
wlcap/tests/: binary.rs
