[package]
name = "hpm-asr"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
audiopipe = { git = "https://github.com/divanshu-go/audiopipe.git", branch = "main", default-features = false, features = ["parakeet"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc-vad = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["download-binaries", "copy-dylibs"] }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
