[package]
name = "hpm-embed"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
hf-hub = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["download-binaries", "copy-dylibs"] }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
