[package]
name = "hpm-ocr"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSError",
    "NSObject",
    "NSString",
] }
objc2-vision = { version = "0.3.2", default-features = false, features = [
    "std",
    "VNObservation",
    "VNRecognizeTextRequest",
    "VNRequest",
    "VNRequestHandler",
    "VNTypes",
] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
]
