[package]
name = "hpm-sck"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "hpm-sck"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = { version = "6", features = ["macos_13_0"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
