[package]
name = "hpm-tray"
version = "0.4.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35.2"
tray-icon = "0.24.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
