[package]
name = "hpm-wlcap"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "hpm-wlcap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"
gstreamer = "0.23"
gstreamer-app = "0.23"
